# mpf-mc-rust

./: .gitignore  Cargo.toml  README.md  build.rs  setup.py
mpfdmc/: generate.sh  server_pb2_grpc.py  test.py
mpfdmc/server/: server_pb2.py  server_pb2_grpc.py
mpfmcrust/: server_pb2_grpc.py
proto/: server.proto
python/: generate.sh  server_pb2.py  server_pb2_grpc.py  test.py
src/: gst_gl_video.rs  main-piston.rs  main.rs  scene.rs  server.rs
