[package]
name = "mpf-mc-rust"
version = "0.1.0"
authors = ["Jan Kantert <jan-mpf@kantert.net>"]
edition = "2018"

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.37.0"
piston_window = "0.112.0"
piston-texture = "0.8.0"
find_folder = "0.3.0"
image = "0.23.9"

gstreamer = "0.16.3"
gstreamer-app = "0.16.3"
gstreamer-video = "0.16.3"

tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"