[package]
name = "mpf-mc-rust"
version = "0.1.0"
authors = ["Jan Kantert <jan-mpf@kantert.net>"]
edition = "2018"

[features]
default = []
gst-gl-video = ["glutin", "gstreamer-gl"]

[dependencies]
# we currently use ggez devel which is not released yet
ggez = { version = "0.5.1", features = ["bzip2"], path = "../ggez" }

image = "0.23.9"
arc-swap = "0.4.7"
fps_counter = "1.0.0"

gstreamer = "0.16.3"
gstreamer-app = "0.16.3"
gstreamer-video = "0.16.3"

# for optional gl video feature
glutin = { version = "0.21", optional = true }
gstreamer-gl = { version = "0.16.3", features = ["wayland", "egl", "x11"], optional = true  }

# used by the gRPC server
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
